--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       "email": "eiixy@zbanx.com"
     }
   ],
+  "license": "Apache 2.0",
   "require": {
     "laravel/framework": "^6.2|^7|^8",
     "guzzlehttp/guzzle": "^7.3",
@@ -31,12 +32,6 @@
       "providers": [
         "Zbanx\\CasClient\\CasClientServiceProvider"
       ]
-    }
-  },
-  "repositories": {
-    "laravel-kit": {
-      "type": "composer",
-      "url": "https://zbanx-composer.pkg.coding.net/zbanx-kit/laravel-kit"
     }
   }
 }
